--- a/index.html
+++ b/index.html
@@ -6,10 +6,150 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Helping Hand</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <section class="head">
+        <div class="head-text">
+            <h1>Let's Help Those Who Are More In Need</h1>
+            <p>
+                We don't need to have deep pockets or be rich to help the needy, the poor and the hungry.We need to have
+                an heart.
+
+            </p>
+            <h5>Kevin Dcruz</h5>
+            <a class="link-text" target="_blank" href="">DONATE NOW</a>
+        </div>
+    </section>
+
+    <section class="donate-today">
+        <div>
+            <h1>
+                Donate Today
+            </h1>
+            <p>
+                You can help the needy and earn some blessings.
+            </p>
+            <div class="tk-container">
+                <div class="tk">
+                    <h1>100tk</h1>
+                </div>
+                <div class="tk red">
+                    <h1>200tk</h1>
+                </div>
+                <div class="tk">
+                    <h1>500tk</h1>
+                </div>
+                <div class="tk">
+                    <h1>1000tk
+
+                    </h1>
+                </div>
+                <div class="tk">
+                    <h1>5000tk</h1>
+                </div>
+
+            </div>
+
+            <form action="" class="ammount">
+                <input type=" text" label="Other Amount(Taka) " placeholder="Other Amount(Taka)">
+            </form>
+            <a class="link-text" target="_blank" href="https://www.linkedin.com/in/fazle-rabbi-fahad/">DONATE
+                NOW</a>
+        </div>
+    </section>
+
+
+    <section class="donate-today">
+        <div>
+            <h1>
+                Our Donate Plan
+            </h1>
+            <p>
+                You take your money and give to the poor, the needy and hungry people
+            </p>
+            <div class="tk-container">
+                <div id="food">
+                    <img class="img-donate" src="icons/food.png" alt="">
+                    <h1>Food For Family</h1>
+                    <p>We will give to the people who need food</p>
+                </div>
+                <div id="shelter">
+                    <img class="img-donate" src="icons/shelter.png" alt="">
+                    <h1>Shelter For Family</h1>
+                    <p>We will find to shelter for the people who need shelter</p>
+                </div>
+                <div id="education">
+                    <img class="img-donate" src="icons/Frame-1.png" alt="">
+                    <h1>Education for a child</h1>
+                    <p>We will send their children to school</p>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="tk-container">
+        <div class="half-width">
+            <h1>Their lives depends on your donation</h1>
+
+            <p> Let's donate for this poor people
+            </p>
+            <a class="link-text" target="_blank" href="https://www.linkedin.com/in/fazle-rabbi-fahad/">How to
+                contribute?</a>
+        </div>
+        <div class="half-width">
+            <img src="images/donation6.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="tk-container">
+
+        <div class="half-width">
+            <img src="images/donation7.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>They need us to survive</h1>
+
+            <p> Let's create a wonderful world
+            </p>
+            <a class="link-text" target="_blank" href="https://www.linkedin.com/in/fazle-rabbi-fahad/">How to
+                contribute?</a>
+        </div>
+
+    </section>
+    <section class="donate-today">
+        <div>
+            <h1>
+                Get My Updates
+            </h1>
+            <p>
+                We will inform you every update.
+            </p>
+
+
+            <div class="subscribe">
+                <div>
+                    <form action="">
+                        <input type="email" label="Email" placeholder="email">
+                    </form>
+                    <div><a class="link-text" target="_blank" href="">Subscribe</a></div>
+
+                </div>
+            </div>
+    </section>
+
+    <footer>
+        <h1>
+            Be Humble
+        </h1>
+        <h3>I'm gonna do it</h3>
+    </footer>
 
 </body>
 
